--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                 <div class="caps face">действующие лица:</div>
                 <div class="caps face">политический деятель 1</div>
                 <div class="caps face">политический деятель 2</div>
-                <div class="description">
+                <p class="description">
                   В первом спектакле предстает не то застолье, не то
                   политические дебаты, свидетелями которых становится зритель.
-                </div>
+                </p>
               </div>
             </div>
             <!-- /////// -->
@@ -198,7 +198,7 @@
                   УБОРЩИЦА — «серый кардинал», тихо выполняющая свою работу; она
                   представляет собой скрытую власть
                 </div>
-                <div class="description">
+                <p class="description">
                   В этом спектакле происходят события, в&nbspкоторых власть
                   предстает как формирующая и форматирующая свой электорат сила.
                   Герои&nbspспектакля —&nbspпредставители власти и простые
@@ -206,7 +206,7 @@
                   Зрителям предоставляется возможность стать частью действия и
                   высказаться относительно представленной ситуации. Впрочем,
                   участие совершенно не обязательно.
-                </div>
+                </p>
               </div>
             </div>
             <!-- /////// -->
@@ -258,7 +258,7 @@
                 <div class="caps">
                   СПОРТСМЕНЫ
                 </div>
-                <div class="description">
+                <p class="description">
                   Действие третьего спектакля разворачивается в виде спортивного
                   соревнования с участием чемпиона и&nbspчленов команд, рефери
                   и&nbspкомментатора. Однако спортивное событие всего лишь
@@ -266,7 +266,7 @@
                   ходе которого совершается суд над членами команды за
                   осознанное выполнение ими совместных действий. Частью процесса
                   также становится зритель.
-                </div>
+                </p>
               </div>
             </div>
             <!-- /////// -->
