--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       </div>
 
       <div class="qr"></div>
+      <div class="credits">
+        made by <a href="https://www.instagram.com/_mirero_/">mirero</a> ✨
+      </div>
     </div>
     <div class="wrapper">
       <div class="firstBlock">
