--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="build/styles/styles.css" type="text/css" />
     <link rel="icon" href="items/soroka_favicon.png" type="image/png" />
 
-    <title>Noone gesture</title>
+    <title>No one gesture</title>
     <meta
       name="description"
-      content="Soroka — plugin for Figma. Pick best font pair, explore and use it"
+      content="Ни один жест» — однодневное междисциплинарное событие, состоящее из трех спектаклей художницы Кати Мордвинкиной"
     />
     <meta name="Keywords" content="figma, plugin, font pair, font, type" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
