--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/reset.css" type="text/css" />
     <link rel="stylesheet" href="styles/fonts.css" type="text/css" />
     <link rel="stylesheet" href="build/styles/styles.css" type="text/css" />
-    <link rel="icon" href="items/soroka_favicon.png" type="image/png" />
+    <link rel="icon" href="items/favicon.png" type="image/png" />
 
     <title>No one gesture</title>
     <meta
