--- a/index.html
+++ b/index.html
@@ -121,7 +121,23 @@
               </div>
             </div>
           </div>
-          <div class="imagePromo"></div>
+          <div class="imagePromo">
+            <!-- <iframe
+              width="325"
+              height="185"
+              src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1?controls=0&loop=1&mute=1"
+            >
+            </iframe> -->
+            <iframe
+              width="325"
+              height="185"
+              src="https://www.youtube.com/embed/Ac6ne90luF4?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
           <div class="afisha">
             <!-- /////// -->
             <div class="budem">
