--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="desktop">
       <div class="block"></div>
       <div class="sorry">
-        Ой! Эта страничка только для телефонов, пожалуйста, отсканируй код
+        Пожалуйста, отсканируй код
       </div>
       <div class="caps left">
         Серия спектаклей на&nbspоснове жестов с&nbspвластной риторикой
